--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,41 @@ nav a.current {
     color: var(--accent) !important;
     border-color: var(--accent);
 }
+
+.notes-link{
+font-size: 1.6rem;
+font-weight: bold;
+}
+
+.meta {
+    color: var(--text-light);
+    font-size: 1rem;
+}
+
+.kb-club a {
+    text-decoration: none;
+    font-size: small;
+    background: #c8e6c9;
+    color: #212121;
+    font-weight: bold;
+    padding: .25rem 0;
+    font-family: sans-serif;
+    transition: .4s;
+}
+
+.kb-club a:hover {
+  background: #4caf4f;
+}
+
+.kb-club-bg,
+.kb-club-no-bg {
+	border: 2px solid #4caf4f;
+	padding: .25rem .5rem;
+    font-weight: 1000;
+}
+
+.kb-club-bg {
+	background: #4caf50;
+	color: #212121;
+}
+
